--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+.gameBoard {
+  display: grid;
+  grid-template-columns: 10px repeat(4, 50px) 10px;
+  grid-template-rows: 10px repeat(5, 50px) 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.borderPiece {
+  background-color: black;
+  border: 2px black solid;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mainPiece {
+  border: 1px black solid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.playerLocation {
+  background-color: greenyellow;
 }
